bin/tests/snapshots/devenv_exec_shebang__83910057cc05bc7f6a9a0c30dd02d0fb_lint_errfmt.snap
---
source: bin/tests/devenv_exec_shebang.rs
---
{ processes = { web = { exec = ''
  #!/usr/bin/env bash
  serve
''; }; }; }
---
<temp_file_path>>1:32:W:24:[devenv_exec_shebang] devenv runs `processes.<name>.exec` with bash, this shebang is ignored; set `package` to choose the interpreter
<temp_file_path>>3:3:W:31:[undeclared_command] `serve` isn't declared
