bin/tests/snapshots/devenv_exec_shebang__83910057cc05bc7f6a9a0c30dd02d0fb_lint_json.snap
---
source: bin/tests/devenv_exec_shebang.rs
---
{ processes = { web = { exec = ''
  #!/usr/bin/env bash
  serve
''; }; }; }
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "devenv_exec_shebang",
      "note": "Shebang in devenv `exec` is ignored",
      "code": 24,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 32
            },
            "to": {
              "line": 4,
              "column": 3
            }
          },
          "message": "devenv runs `processes.<name>.exec` with bash, this shebang is ignored; set `package` to choose the interpreter",
          "suggestion": null,
          "fixable": false
        }
      ]
    },
    {
      "name": "undeclared_command",
      "note": "Command in a shell script isn't declared or doesn't exist",
      "code": 31,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 8
            }
          },
          "message": "`serve` isn't declared",
          "suggestion": null,
          "fixable": false,
          "help": "Add the package providing `serve` to `packages`. If the environment provides it, add `# statix provided=serve` at the top of the script (or `provided = [ \"serve\" ]` in statix.toml); if it's optional, check for it with `command -v serve`."
        }
      ]
    }
  ]
}
